objects/Order__c.object
<CustomObject>
    <fields>
        <fullName>Amount_Paid__c</fullName>
        <label>Paid Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BLN_TKT_profile__c</fullName>
        <label>BLN TKT profile</label>
        <referenceTo>Tkt_profile__c</referenceTo>
        <relationshipLabel>BLN Orders</relationshipLabel>
        <relationshipName>BLN_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Currency_Code__c</fullName>
        <label>Currency Code</label>
        <referenceTo>Currency__c</referenceTo>
        <relationshipLabel>BLN Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EVent_Admin_Comments__c</fullName>
        <label>EVent Admin Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Events__c</fullName>
        <label>Events</label>
        <referenceTo>BLN_Event__c</referenceTo>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fee_Amount__c</fullName>
        <label>Fee Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Order_Discount__c</fullName>
        <label>Order Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Order_Status__c</fullName>
        <label>Order Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Paid</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Partially Paid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fully Paid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Abandoned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Check Not Received</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Order_Sub_Total__c</fullName>
        <label>Order Sub-Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Order_Taxes__c</fullName>
        <label>Order Taxes</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Order_Total__c</fullName>
        <label>Order Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>order_type__c</fullName>
        <label>order type</label>
        <picklist>
            <picklistValues>
                <fullName>EVENT ATTENDEE</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>EVENT PRODUCER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EVENT EXIBITOR</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>BLN Order</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Order_Status__c</columns>
        <columns>Events__c</columns>
        <columns>Order_Total__c</columns>
        <columns>Order_Sub_Total__c</columns>
        <columns>Order_Discount__c</columns>
        <columns>Amount_Paid__c</columns>
        <columns>order_type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>O-{00000000}</displayFormat>
        <label>Order Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BLN Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>